# boxland

./: .gitignore  Cargo.toml  Justfile  flake.nix
game/: Cargo.toml
game/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: bouncing-ball.tsx  flashing-title.tsx  game.tsx  header.tsx  intro.tsx  theme-provider.tsx
web/src/components/ui/: fake-switch.tsx
web/src/game/: game.d.ts  game.js  game_bg.wasm  game_bg.wasm.d.ts
